# quillman

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  README_DOCS.md  notes.txt  pyproject.toml  requirements.txt
.github/actions/setup/: action.yml
.github/scripts/: find_modal_examples.py
.github/workflows/: cd.yml  check.yml  deprecations.yml  e2e.yml  pierre-review.yml
notebooks/: LangChain-Agent.ipynb
requirements/: requirements-dev.txt  requirements.txt
src/: app.py  common.py  common_proto.py  fillers.py  langchain.py  llama.py  llm_model.py  llm_vicuna.py  llm_zephyr.py  moshi.py  proto.py  proto_client.py  prototype.py  transcriber.py  tts.py  vector_store.py  whisper.py  xtts.py  zephyr.py
src/docloader/: X509-cert-7504625587682750196.pem  load_to_db.ipynb  requirements.txt
src/frontend/: app.jsx  appfreeze.jsx  appold.jsx  converter.js  index.html  processor.js  recorder-node.js  spinners.css
src/prompts/: custom_instructions.py
tests/: e2e_test.py  moshi_client.py  requirements.txt
tests/e2e_in/: chunk_0.opus  chunk_1.opus  chunk_2.opus  chunk_3.opus  chunk_4.opus  chunk_5.opus  chunk_6.opus  chunk_7.opus  chunk_8.opus  chunk_9.opus
tests/test-audio/: user_input_chunk1.opus
